[css]: Spacing fix.

--- a/css/okfn.css
+++ b/css/okfn.css
@@ -1127,8 +1127,6 @@ body#bp-default #wp-admin-bar .padder {
   overflow: hidden;
   height: 162px;
   padding: 0px 10px;
-}
-.magazine .post .text {
   margin-bottom: 8px;
 }
 .magazine .post.preview .button {
